Fixes issue #2434 - Add JUnit tests for annotationscan extension (#2450)