@@ -9,11 +9,21 @@
         <version>22.2.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>piranha-extension-standard-annotationscan</artifactId>
+    <artifactId>piranha-extension-annotationscan</artifactId>
     <packaging>jar</packaging>
 
-    <name>Piranha - Extension - Standard - Annotation Scan</name>
-
+    <name>Piranha - Extension - Annotation Scan</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>@{argLine} --add-opens cloud.piranha.extension.annotationscan/cloud.piranha.extension.annotationscan.internal=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <!-- compile -->
         <dependency>
